src/objects/Order_Line__c/fields/Order_Booked_By__c.field-meta.xml
<CustomField>
    <fullName>Order_Booked_By__c</fullName>
    <label>Order Booked By</label>
    <length>240</length>
    <type>Text</type>
</CustomField>