src/objects/Order_Line__c/fields/Order_line_Key__c.field-meta.xml
<CustomField>
    <fullName>Order_line_Key__c</fullName>
    <externalId>true</externalId>
    <label>Order line Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>