src/objects/Order_Line__c/fields/Order_Line_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Request_Type__c</fullName>
    <description>This field shows the value of Request Type copied down from the Order header</description>
    <formula>Order__r.Request_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows the value of Request Type copied down from the Order header</inlineHelpText>
    <label>Order Line Request Type</label>
    <type>Text</type>
</CustomField>