src/objects/Order_Line__c/fields/Order_Product_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Sequence_Number__c</fullName>
    <label>Order Product Sequence Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>