src/objects/Order_Line__c/fields/Ordered_Item__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Item__c</fullName>
    <formula>Part_Number__r.Marketing_P_N__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordered Item</label>
    <type>Text</type>
</CustomField>