src/objects/Order_Line__c/fields/Original_Promise_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Promise_Date__c</fullName>
    <label>Original Promise Date</label>
    <type>Date</type>
</CustomField>