src/objects/Order_Line__c/fields/Original_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Request_Date__c</fullName>
    <label>Original Request Date</label>
    <type>Date</type>
</CustomField>