src/objects/Order_Line__c/fields/OriginalOrderItem__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>ChildOrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>