src/objects/Order_Line__c/fields/Parent_WareHouse__c.field-meta.xml
<CustomField>
    <fullName>Parent_WareHouse__c</fullName>
    <label>Parent WareHouse</label>
    <length>20</length>
    <type>Text</type>
</CustomField>