src/objects/Order_Line__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part Number</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>