src/objects/Order_Line__c/fields/Pick_Meaning__c.field-meta.xml
<CustomField>
    <fullName>Pick_Meaning__c</fullName>
    <label>Pick Meaning</label>
    <length>30</length>
    <type>Text</type>
</CustomField>