src/objects/Order_Line__c/fields/PO_LI_NO__c.field-meta.xml
<CustomField>
    <fullName>PO_LI_NO__c</fullName>
    <label>Purchase Order Line Item No.</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>