src/objects/Order_Line__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <formula>Ship_To_Location__r.ShippingPostalCode</formula>
    <label>Postal Code</label>
    <type>Text</type>
</CustomField>