src/objects/Order_Line__c/fields/Primary_Description__c.field-meta.xml
<CustomField>
    <fullName>Primary_Description__c</fullName>
    <label>Primary Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>