src/objects/Order_Line__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <formula>Part_Number__r.Description</formula>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>