src/objects/Order_Line__c/fields/Qual_Sample__c.field-meta.xml
<CustomField>
    <fullName>Qual_Sample__c</fullName>
    <label>Qual Sample</label>
    <length>20</length>
    <type>Text</type>
</CustomField>