src/objects/Order_Line__c/fields/Quantity_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Rollup__c</fullName>
    <inlineHelpText>This is the quantity of serial numbers associated with this part</inlineHelpText>
    <label>Quantity Rollup</label>
    <summaryForeignKey>Serial_Number__c.Order_Line__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>