src/objects/Order_Line__c/fields/Reported_Problem__c.field-meta.xml
<CustomField>
    <fullName>Reported_Problem__c</fullName>
    <label>Reported Problem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>