src/objects/Order_Line__c/fields/ReserveAmount__c.field-meta.xml
<CustomField>
    <fullName>ReserveAmount__c</fullName>
    <label>Reserve Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>