src/objects/Order_Line__c/fields/ReservePercent__c.field-meta.xml
<CustomField>
    <fullName>ReservePercent__c</fullName>
    <label>Reserve Percent</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>