src/objects/Order_Line__c/fields/Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason__c</fullName>
    <label>Return Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>