src/objects/Order_Line__c/fields/RMA_Number__c.field-meta.xml
<CustomField>
    <fullName>RMA_Number__c</fullName>
    <formula>Order__r.PoNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA Number</label>
    <type>Text</type>
</CustomField>