src/objects/Order_Line__c/fields/RMA_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>RMA_Received_Date__c</fullName>
    <label>RMA Received Date</label>
    <type>Date</type>
</CustomField>