src/objects/Order_Line__c/fields/RMA_Request__c.field-meta.xml
<CustomField>
    <fullName>RMA_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RMA Request#</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>RMA_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>