src/objects/Order_Line__c/fields/RMA_Request_Line__c.field-meta.xml
<CustomField>
    <fullName>RMA_Request_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RMA Request Line</label>
    <referenceTo>RMA_Request_Line__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>