src/objects/Order_Line__c/fields/RMAID__c.field-meta.xml
<CustomField>
    <fullName>RMAID__c</fullName>
    <label>RMAID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>