src/objects/Order_Line__c/fields/Salesrep_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesrep_Name__c</fullName>
    <label>Salesrep Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>