src/objects/Order_Line__c/fields/Schedule_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Ship_Date__c</fullName>
    <label>Schedule Ship Date</label>
    <type>Date</type>
</CustomField>