src/objects/Order_Line__c/fields/SelectedSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SelectedSerialNumber__c</fullName>
    <label>SelectedSerialNumber</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>