src/objects/Order_Line__c/fields/ServiceDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>