src/objects/Order_Line__c/fields/Ship_Complete__c.field-meta.xml
<CustomField>
    <fullName>Ship_Complete__c</fullName>
    <label>Ship Complete?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>