src/objects/Order_Line__c/fields/Ship_Debit_Qte__c.field-meta.xml
<CustomField>
    <fullName>Ship_Debit_Qte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship &amp; Debit Qte #</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>