src/objects/Order_Line__c/fields/Ship_From_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Ship_From_Inventory__c</fullName>
    <inlineHelpText>For RMA Orders, this is the Receiving site. Otherwise, it is the Ship from site.</inlineHelpText>
    <label>Warehouse</label>
    <length>20</length>
    <type>Text</type>
</CustomField>