src/objects/Order_Line__c/fields/Ship_From_Subinventory__c.field-meta.xml
<CustomField>
    <fullName>Ship_From_Subinventory__c</fullName>
    <label>Ship From Subinventory</label>
    <length>10</length>
    <type>Text</type>
</CustomField>