src/objects/Order_Line__c/fields/Ship_Method__c.field-meta.xml
<CustomField>
    <fullName>Ship_Method__c</fullName>
    <label>Ship Method</label>
    <length>30</length>
    <type>Text</type>
</CustomField>