src/objects/Order_Line__c/fields/Ship_Status__c.field-meta.xml
<CustomField>
    <fullName>Ship_Status__c</fullName>
    <label>Ship Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>