src/objects/Order_Line__c/fields/Ship_To_City__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_City__c</fullName>
    <formula>Ship_To_Location__r.ShippingCity</formula>
    <label>Ship To City</label>
    <type>Text</type>
</CustomField>