src/objects/Order_Line__c/fields/Ship_To_Location__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>