src/objects/Order_Line__c/fields/Ship_To_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Postal_Code__c</fullName>
    <formula>Ship_To_Location__r.ShippingPostalCode</formula>
    <label>Ship To Postal Code</label>
    <type>Text</type>
</CustomField>