src/objects/Order_Line__c/fields/Ship_To_State__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_State__c</fullName>
    <formula>Ship_To_Location__r.ShippingState</formula>
    <label>Ship To State</label>
    <type>Text</type>
</CustomField>