src/objects/Order_Line__c/fields/Ship_To_Street__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Street__c</fullName>
    <formula>Ship_To_Location__r.ShippingStreet</formula>
    <label>Ship To Street</label>
    <type>Text</type>
</CustomField>