src/objects/Order_Line__c/fields/Ship_To_Subinventory__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Subinventory__c</fullName>
    <label>Ship To Subinventory</label>
    <length>3</length>
    <type>Text</type>
</CustomField>