src/objects/Order_Line__c/fields/Ship_To_Zip_pos__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Zip_pos__c</fullName>
    <label>Ship To Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>