src/objects/Order_Line__c/fields/Shipping_Period__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Period__c</fullName>
    <label>Shipping Period</label>
    <length>20</length>
    <type>Text</type>
</CustomField>