src/objects/Order_Line__c/fields/SO_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>SO_Number_Formula__c</fullName>
    <formula>Order__r.PoNumber + &quot; - &quot; + Line__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SO Number</label>
    <type>Text</type>
</CustomField>