src/objects/Order_Line__c/fields/Source_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Id__c</fullName>
    <externalId>true</externalId>
    <label>Source System Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>