src/objects/Order_Line__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>