src/objects/Order_Line__c/fields/Splitted_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Splitted_Line_Id__c</fullName>
    <label>Splitted Line Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>