src/objects/Order_Line__c/fields/Standard_Cost__c.field-meta.xml
<CustomField>
    <fullName>Standard_Cost__c</fullName>
    <formula>Part_Number__r.Standard_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>