src/objects/Order_Line__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>Ship_To_Location__r.ShippingState</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>