src/objects/Order_Line__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <formula>Ship_To_Location__r.ShippingStreet</formula>
    <label>Street</label>
    <type>Text</type>
</CustomField>