src/objects/Order_Line__c/fields/System_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>System_Manufacturer__c</fullName>
    <label>System Manufacturer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>