src/objects/Order_Line__c/fields/User_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>User_Item_Description__c</fullName>
    <label>User Item Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>