src/objects/Order_Line__c/fields/Wavelength__c.field-meta.xml
<CustomField>
    <fullName>Wavelength__c</fullName>
    <label>Wavelength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>