src/objects/Order_Line__c/fields/Waybill__c.field-meta.xml
<CustomField>
    <fullName>Waybill__c</fullName>
    <label>Waybill</label>
    <length>30</length>
    <type>Text</type>
</CustomField>