src/objects/Order_Line__c/recordTypes/RMA_Order_Line.recordType-meta.xml
<RecordType>
    <fullName>RMA_Order_Line</fullName>
    <active>true</active>
    <description>This is the record type for RMA Order Lines</description>
    <label>RMA Order Line</label>
</RecordType>