src/objects/Order_Line__c/recordTypes/Sales_Order_Line.recordType-meta.xml
<RecordType>
    <fullName>Sales_Order_Line</fullName>
    <active>true</active>
    <description>This is the order line item used for all sales orders</description>
    <label>Sales Order Line</label>
</RecordType>