src/objects/Order_Line__c/listViews/Shipment_Report.listView-meta.xml
<ListView>
    <fullName>Shipment_Report</fullName>
    <columns>Order__c</columns>
    <columns>SO_Number_Formula__c</columns>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>End_Customer_Name__c</columns>
    <columns>Marketing_Part__c</columns>
    <columns>Part_Number__c</columns>
    <columns>Quantity__c</columns>
    <columns>Line_Total__c</columns>
    <columns>RSM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order_Line__c.Sales_Order_Line</value>
    </filters>
    <filters>
        <field>Actual_Ship_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Shipment Report</label>
</ListView>