src/objects/Order_Line__c/listViews/Zero_Dollar_Sales_Orders.listView-meta.xml
<ListView>
    <fullName>Zero_Dollar_Sales_Orders</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Zero Dollar Sales Orders</label>
    <sharedTo>
        <role>Sales_Admin</role>
    </sharedTo>
</ListView>